pom xml edited v3.